# ztr

./: Cargo.toml  LICENSE  README.md  justfile  lefthook.yml
src/: lib.rs  main.rs
