[package]
name = "ztr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_fs = "1.0.10"
clap = { version = "4.1.6", features = ["derive"] }
handlebars = "4.3.6"
serde = "1.0.152"
serde_derive = "1.0.152"
